--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Pavlo Kozak</h1>
 
         <div class="contact">
-            <p><strong>Email:</strong> luciodeuspriest@gmail.com</p>
+            <p><strong>Email:</strong> kaban228@gmail.com</p>
             <p><strong>Location:</strong> Lviv, Ukraine</p>
         </div>
 
